# colored_text_in_python

./: .gitignore  Color_in_python.ipynb  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
modules/: Color_module.py
src/colored_text/: __init__.py  colors.py  py.typed
tests/: test_colors.py
